hello-world-release/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: application-ns
  name: hello-world-service
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 5000
  selector:
      app: hello-world
